# switchyard

./: .gitignore  AGENTS.md  Cargo.toml  README.md  switchyard.json
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: classifier.rs  config.rs  event.rs  lib.rs  router.rs  vector_store.rs
crates/dashboard/: Cargo.toml
crates/dashboard-ui/: .gitignore  Cargo.toml  README.md  Trunk.toml  astro.config.mjs  index.html  package-lock.json  package.json
crates/dashboard-ui/src/: lib.rs
crates/dashboard-ui/src/components/: Config.tsx  Dashboard.tsx  Overview.tsx  Routes.tsx
crates/dashboard-ui/src/layouts/: Layout.astro
crates/dashboard-ui/src/pages/: config.astro  index.astro  overview.astro  routes.astro
crates/dashboard/src/: lib.rs
data/: benchmark_v3.jsonl  routing-train-extra.jsonl  routing-train-merged.jsonl  routing-train-v2.jsonl
models/switchyard-router/: labels.json
scripts/: eval_v2.py  train_v2.py
specs/: cli.md  core.md  dashboard.md
src/: config.rs  main.rs  router.rs  server.rs
