[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
]

# dashboard-ui is built separately with trunk (targets wasm32)
exclude = [
    "crates/dashboard-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/c22-space/switchyard"

[workspace.dependencies]
switchyard-core = { path = "crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
