[package]
name = "switchyard-dashboard-ui"
version = "0.1.0"
edition = "2021"
description = "Switchyard dashboard Leptos frontend"

[dependencies]
leptos = { version = "0.8", features = [] }
leptos_meta = { version = "0.8", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = ["Window", "console", "Response"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

[lib]
crate-type = ["cdylib", "rlib"]
