[package]
name = "switchyard-dashboard"
version.workspace = true
edition.workspace = true
description = "Switchyard dashboard - route visibility and statistics"

[dependencies]
switchyard-core = { workspace = true }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
